feat: prepare for Vercel + Render deployment
- Add config.js for environment-based API URLs
- Update main.js and auth.js to use config
- Add deployment checklist with step-by-step instructions
- Configure frontend for production deployment

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,6 +72,7 @@
       </form>
     </section>
   </main>
+  <script src="public/config.js"></script>
   <script src="public/main.js"></script>
   <script src="public/auth.js"></script>
 </body>
